# eyecite

./: .dockerignore  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  CHANGES.md  Dockerfile  ENHANCEMENTS.MD  PLAN.md  README.md  README.rst  TUTORIAL.ipynb  annotate.html  clean.html  demo_extended.py  devbox.json  find.html  generate_documentation.sh  index.html  models.html  pr120-output.csv  pr120-report.md  pyproject.toml  requirements.txt  resolve.html  setup.cfg  setup.py  test_extended_integration.py  tokenizers.html
.github/: dependabot.yml
.github/workflows/: benchmark.yml  check_changelog.yml  ci.yaml.pending  docker-api.yml  lint.yml  pdoc.yml  pr_report.yml  pypi.yml  tests.yml
124/results/: output.csv  report.md
125/results/: report.md
130/results/: report.md
140/results/: output.csv  report.md
142/results/: output.csv  report.md
152/results/: report.md
153/results/: report.md
160/results/: report.md
164/results/: report.md
165/results/: report.md
166/results/: report.md
169/results/: report.md
170/results/: report.md
172/results/: report.md
173/results/: report.md
177/results/: report.md
178/results/: report.md
181/results/: report.md
182/results/: report.md
188/results/: report.md
189/results/: report.md
190/results/: output.csv  report.md
191/results/: output.csv  report.md
195/results/: report.md
197/results/: report.md
200/results/: report.md
202/results/: report.md
203/results/: output.csv  report.md
205/results/: report.md
206/results/: output.csv  report.md
207/results/: report.md
211/results/: report.md
214/results/: output.csv  report.md
215/results/: report.md
217/results/: report.md
218/results/: report.md
219/results/: output.csv  report.md
220/results/: report.md
222/results/: report.md
223/results/: report.md
224/results/: report.md
225/results/: report.md
227/results/: report.md
228/results/: output.csv  report.md
230/results/: report.md
235/results/: output.csv  report.md
237/results/: output.csv  report.md
238/results/: output.csv  report.md
239/results/: report.md
240/results/: report.md
241/results/: output.csv  report.md
245/results/: report.md
246/results/: report.md
247/results/: report.md
248/results/: report.md
250/results/: report.md
251/results/: output.csv  report.md
252/results/: output.csv  report.md
254/results/: output.csv  report.md
255/results/: output.csv  report.md
256/results/: report.md
258/results/: output.csv  report.md
260/results/: report.md
262/results/: report.md
263/results/: output.csv  report.md
265/results/: report.md
266/results/: report.md
269/results/: report.md
270/results/: report.md
271/results/: report.md
272/results/: report.md
274/results/: report.md
275/results/: report.md
276/results/: report.md
277/results/: report.md
281/results/: report.md
282/results/: report.md
283/results/: report.md
294/results/: output.csv  report.md
307/results/: output.csv  report.md
309/results/: report.md
311/results/: report.md
315/results/: report.md
319/results/: report.md
320/results/: report.md
api/: main.py  test_api.py
api_documentation/: generate_documentation.sh
api_documentation/eyecite/: find.html  index.html  models.html  resolve.html
benchmark/: benchmark.md  benchmark.py  benchmark.sh  chart.py  local.sh  pr120-branch.csv  pr120-main.csv  pr120-output.csv  pr120-report.md
eyecite/: __init__.py  annotate.py  case_name.py  citation_filter.py  citation_metadata.py  clean.py  cleaners.py  court_matching.py  find.html  find.py  find_citations.py  helpers.py  index.html  models.py  models_extended.py  pin_cite.py  regexes.py  reporter_tokenizer.py  resolve.py  test_factories.py  token_matching.py  tokenizers.py  tokenizers_extended.py  utils.py
joss/: paper.bib  paper.md
microscope/: cleaners.py  find_citations.py  helpers.py  models.py  reporter_tokenizer.py  utils.py
tests/: factories.py  testEyeCite.py  test_AnnotateTest.py  test_CourtsTest.py  test_FindTest.py  test_ModelsTest.py  test_RegexTest.py  test_ResolveTest.py  test_TokenizeTest.py  test_UtilsTest.py  test_constitutions.py  test_counts.py  test_get.py  test_helpers.py  test_models_extended.py  test_opinion.py
tests/assets/: bluebook_citations.py  ca_citations.py  case_Democracy.txt  case_NC.txt  citation_string.txt  opinion.txt  opinion_AL.txt  opinions_AL2.txt  opinions_KY.txt  statute_NC.txt
