[project]
name = "eyecite"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Samier", email = "samier_saeed@protonmail.com"},
]
dependencies = [
    "reporters-db>=3.2.41",
    "lxml>=5.1.0",
    "pyahocorasick>=2.0.0",
    "regex>=2023.12.25",
    "courts-db>=0.10.22",
]
requires-python = ">=3.10"
readme = "README.md"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "isort>=5.13.2",
    "ruff>=0.3.2",
    "exrex>=0.11.0",
    "roman>=4.1",
    "pytest>=8.1.1",
    "typer>=0.9.0",
]

[tool.pyright]
venvPath = ".devbox/virtenv/python310/"
venv = ".venv"