[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools",
]

[project]
name = "eyecite"
version = "2.7.6"
description = "Tool for extracting legal citations from text strings."
readme = "README.rst"
keywords = ["legal", "courts", "citations", "extraction", "cites"]
license = "BSD-2-Clause"
license-files = [ "LICENSE" ]
authors = [
  { name = "Free Law Project", email = "info@free.law" },
]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

urls.Repository = "https://github.com/freelawproject/eyecite"
urls."Organisation Homepage" = "https://free.law/"

dependencies = [
  "courts-db>=0.10.9",
  "fast-diff-match-patch>=2.0.0",
  "lxml>=4.6.3",
  "pyahocorasick>=1.2",
  "regex>=2020.1.8",
  "reporters-db>=3.2.53",
]

[dependency-groups]
benchmark = [
  "matplotlib>=3.5.3",
]
dev = [
  "exrex>=0.11.0",
  "hyperscan>=0.1.5",
  "mypy>=1.3.0",
  "pdoc3>=0.10.0",
  "roman>=4.0",
]

[tool.setuptools]
packages = [ "eyecite" ]

[tool.ruff]
line-length = 79
lint.extend-safe-fixes = [
  # non-pep585-annotation
  "UP006",
]
lint.select = [
  # flake8-bugbear
  "B",
  # flake8-comprehensions
  "C4",
  # pycodestyle
  "E",
  # Pyflakes errors
  "F",
  # isort
  "I",
  # flake8-simplify
  "SIM",
  # flake8-tidy-imports
  "TID",
  # pyupgrade
  "UP",
  # Pyflakes warnings
  "W",
]
lint.ignore = [
  # flake8-bugbear opinionated rules
  "B9",
  # line-too-long
  "E501",
  # suppressible-exception
  "SIM105",
  # if-else-block-instead-of-if-exp
  "SIM108",
]
